force-app/main/default/objects/Relat_rio_Auditoria__c/Relat_rio_Auditoria__c.object-meta.xml
<CustomObject>
    <label>Relatório Auditoria</label>
    <nameField>
        <displayFormat>RA - {0000}</displayFormat>
        <label>Nome de Relatório Auditoria</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relatórios Auditoria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>