force-app/main/default/objects/Relat_rio_Auditoria__c/fields/Auditor__c.field-meta.xml
<CustomField>
    <fullName>Auditor__c</fullName>
    <formula>Auditoria__r.Responsavel__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auditor</label>
    <type>Text</type>
</CustomField>