force-app/main/default/objects/Relat_rio_Auditoria__c/fields/Auditoria__c.field-meta.xml
<CustomField>
    <fullName>Auditoria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Auditoria</label>
    <referenceTo>Auditoria__c</referenceTo>
    <relationshipLabel>Relatórios Auditoria</relationshipLabel>
    <relationshipName>Relat_rios_Auditoria</relationshipName>
    <type>Lookup</type>
</CustomField>