force-app/main/default/objects/Relat_rio_Auditoria__c/fields/Caracteristicas_da_Empresa_Auditada__c.field-meta.xml
<CustomField>
    <fullName>Caracteristicas_da_Empresa_Auditada__c</fullName>
    <label>Características da Empresa Auditada</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>