force-app/main/default/objects/Relat_rio_Auditoria__c/fields/Conclus_es__c.field-meta.xml
<CustomField>
    <fullName>Conclus_es__c</fullName>
    <label>Conclusões</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>