force-app/main/default/objects/Relat_rio_Auditoria__c/fields/Contato__c.field-meta.xml
<CustomField>
    <fullName>Contato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contato</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Relatórios Auditoria</relationshipLabel>
    <relationshipName>Relat_rios_Auditoria</relationshipName>
    <type>Lookup</type>
</CustomField>