force-app/main/default/objects/Relat_rio_Auditoria__c/fields/Descri_o_das_n_o_conformidade__c.field-meta.xml
<CustomField>
    <fullName>Descri_o_das_n_o_conformidade__c</fullName>
    <label>Descrição das não conformidade</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>