force-app/main/default/objects/Relat_rio_Auditoria__c/fields/Objetivo_Escopo_e_Data_da_Auditoria__c.field-meta.xml
<CustomField>
    <fullName>Objetivo_Escopo_e_Data_da_Auditoria__c</fullName>
    <label>Objetivo, Escopo e Data da Auditoria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>