force-app/main/default/objects/Relat_rio_Auditoria__c/fields/Observa_es_a_Serem_Consideradas__c.field-meta.xml
<CustomField>
    <fullName>Observa_es_a_Serem_Consideradas__c</fullName>
    <label>Observações a Serem Consideradas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>