force-app/main/default/objects/Relat_rio_Auditoria__c/fields/RA__c.field-meta.xml
<CustomField>
    <fullName>RA__c</fullName>
    <label>RA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>