force-app/main/default/objects/Relat_rio_Auditoria__c/fields/Trilha_da_Auditoria__c.field-meta.xml
<CustomField>
    <fullName>Trilha_da_Auditoria__c</fullName>
    <label>Trilha da Auditoria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>